@@ -2,7 +2,13 @@ plugins{
     id "java"
 }
 
-group pGroup
+ext{
+    sdkRoot = System.getenv("ANDROID_HOME")
+    sdkVersion = '30'
+    artifactFilename = "BetaMindy.jar"
+}
+
+group "sk7725"
 
 sourceSets.main{
     java.srcDir("src/")
@@ -16,22 +22,17 @@ repositories{
 
 dependencies{
     annotationProcessor 'com.github.Anuken:jabel:0.4.0'
-    implementation "com.github.Anuken.Mindustry:core:$pVer"
+    compileOnly "com.github.Anuken.MindustryJitpack:core:2f8b009dbb"
+    compileOnly "com.github.Anuken.Arc:arc-core:dfcb21ce56"
 }
 
-ext{
-    sdkRoot = System.getenv("ANDROID_HOME")
-    sdkVersion = '30'
-}
+jar.archiveFileName.set("raw-$artifactFilename")
 
-jar.archiveFileName.set("raw-$pArtifactFilename");
-
-def isWindows = System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows");
+def isWindows = System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")
 
 task alphableed doFirst{
     exec{
         workingDir "$rootDir"
-
         println "Alpha-bleeding sprites..."
         if(isWindows){
             commandLine("cmd", "/c", "alpha-bleeding-windows.exe", "--replace", "./assets/sprites/")
@@ -42,11 +43,10 @@ task alphableed doFirst{
 }
 
 task dexify(type: Jar){
-    archiveFileName.set(pArtifactFilename)
+    archiveFileName.set(artifactFilename)
 
-    final File jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "raw-$pArtifactFilename"),
+    final File jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "raw-$artifactFilename"),
                dexedArtifact = new File(tasks.dexify.getTemporaryDir(), "dexed.jar")
-
 
     doFirst{
         //collect dependencies needed for desugaring
@@ -54,7 +54,7 @@ task dexify(type: Jar){
 
         exec{
             workingDir dexedArtifact.parent
-            def command = ["d8", "--min-api", pMinApi]
+            def command = ["d8", "--min-api", "14"]
             for(def file : files){
                 command += "--classpath"
                 command += file.path
@@ -86,14 +86,11 @@ task buildMove(dependsOn: build){
 
 tasks.withType(JavaCompile){
     targetCompatibility = 8
-    sourceCompatibility = JavaVersion.VERSION_14
+    sourceCompatibility = JavaVersion.VERSION_17
     options.encoding = "UTF-8"
     options.compilerArgs += ["-Xlint:deprecation"]
     if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+        options.compilerArgs.addAll(['--release', '8'])
     }
     compileJava.options.fork = true
-    doFirst{
-        options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
-    }
 }
